[package]
name = "donation-sample-single-package-no-workspace"
description = "Donation Contract Example for NEAR Protocol"
version = "0.7.7"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
repository = "https://github.com/dj8yfo/sample_no_workspace"

[lib]
crate-type = ["cdylib", "rlib"]
# add comment for test

# template: https://github.com/SourceScan/cargo-near-image/tree/0.6.0-near
# => 
# https://github.com/dj8yfo/cargo-near-image/tree/0.x.x-builer-local-cargo-near
[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:cargo-near-commit"
image_digest = "sha256:5352c9450a08da7bf370e717fa746cdc62484b5ef8f810c78df73fac8874fc50"
container_build_command = ["cargo", "near", "build"]
source_code_git_url = "https://github.com/Canvinus/sample_no_workspace.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"], git = "https://github.com/dj8yfo/near-sdk-rs.git", branch = "add_contract_metadata" }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"], git = "https://github.com/dj8yfo/near-sdk-rs.git", branch = "add_contract_metadata" }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
